--- a/Labs/CH02/Ch2/PriceQuoteAndTipCalc/Views/Home/PriceQuote.cshtml
+++ b/Labs/CH02/Ch2/PriceQuoteAndTipCalc/Views/Home/PriceQuote.cshtml
@@ -8,23 +8,23 @@
     <form asp-action="PriceQuote" method="post" class="container-fluid d-flex flex-column">
         <div asp-validation-summary="All" class="text-danger"></div>
         <div class="d-flex justify-content-between align-items-center mb-2">
-            <p>Subtotal: </p>
-            <input type="text" name="subtotal" style=" height: 25px; " value="@Model.Subtotal">
+            <p class="form-label">Subtotal: </p>
+            <input class="form-control w-50" type="text" name="subtotal" style=" height: 25px; " value="@Model.Subtotal">
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-2">
-            <p>Discount Percent: </p>
-            <input type="text" name="discountPercent" style=" height: 25px; " value="@Model.DiscountPercent">
+            <p class="form-label">Discount Percent: </p>
+            <input class="form-control w-50" type="text" name="discountPercent" style=" height: 25px; " value="@Model.DiscountPercent">
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-2">
-            <p>Discount Amount: </p>
-            <p class="mb-0">$@Model.DiscountAmount.ToString("0.00")</p>
+            <p class="form-label">Discount Amount: </p>
+            <p class="form-label">$@Model.DiscountAmount.ToString("0.00")</p>
         </div>
 
         <div class="d-flex justify-content-between align-items-center mb-2">
-            <p>Total: </p>
-            <p class="mb-0">$@Model.Total.ToString("0.00")</p>
+            <p class="form-label">Total: </p>
+            <p class="form-label">$@Model.Total.ToString("0.00")</p>
         </div>
 
         <div class="d-flex justify-content-start gap-2 mt-3">
