--- a/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Create.cshtml
+++ b/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Create.cshtml
@@ -20,6 +20,12 @@
     </div>
 
     <div class="form-group mb-2">
+        <label asp-for="Description"></label>
+        <input asp-for="Description" type="text" class="form-control" />
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-2">
         <label asp-for="Priority">Priority</label>
         <input asp-for="Priority" class="form-control" placeholder="Enter priority (Low, Medium, High)" />
         <span asp-validation-for="Priority" class="text-danger"></span>
@@ -28,6 +34,11 @@
     <div class="form-group mb-2">
         <label asp-for="AssignedMechanic">Assigned Mechanic</label>
         <input asp-for="AssignedMechanic" class="form-control" placeholder="Enter mechanic name" />
+    </div>
+
+     <div class="form-group mb-2">
+        <label asp-for="CustomerName"></label>
+        <input asp-for="CustomerName" class="form-control" />
     </div>
 
     <div class="form-group mb-2">
