--- a/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Edit.cshtml
+++ b/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Edit.cshtml
@@ -22,6 +22,12 @@
     </div>
 
     <div class="form-group mb-2">
+        <label asp-for="Description"></label>
+        <input asp-for="Description" type="text" class="form-control" />
+        <span asp-validation-for="Description" class="text-danger"></span>
+    </div>
+
+    <div class="form-group mb-2">
         <label asp-for="Priority"></label>
         <input asp-for="Priority" class="form-control" />
         <span asp-validation-for="Priority" class="text-danger"></span>
@@ -30,6 +36,11 @@
     <div class="form-group mb-2">
         <label asp-for="AssignedMechanic"></label>
         <input asp-for="AssignedMechanic" class="form-control" />
+    </div>
+
+    <div class="form-group mb-2">
+        <label asp-for="CustomerName"></label>
+        <input asp-for="CustomerName" class="form-control" />
     </div>
 
     <div class="form-group mb-2">
