--- a/Labs/CH07/CH07Lab/Areas/Help/Views/Shared/_HelpLayout.cshtml
+++ b/Labs/CH07/CH07Lab/Areas/Help/Views/Shared/_HelpLayout.cshtml
@@ -3,8 +3,16 @@
 }
 
 @section Header {
-    <h1>Help Section</h1>
+    @if (IsSectionDefined("Header"))
+    {
+        @RenderSection("Header", required: false)
+    }
+    else
+    {
+        <h1>Help Section</h1>
+    }
 }
+
 
 <div class="container mt-4">
     <ul class="nav nav-tabs mb-3">
