Final Fix Images

--- a/FinalProject/AWD1115Final/AWD1115Final/Views/Home/Index.cshtml
+++ b/FinalProject/AWD1115Final/AWD1115Final/Views/Home/Index.cshtml
@@ -22,5 +22,5 @@
             <li>✔ <span>Generate simple reports</span></li>
         </ul>
 
-        <img src="~/images/mechtrack-screenshot.png" alt="App Screenshot" class="img-fluid rounded shadow mt-3" />
+        <img src="~/images/MechTrackLogos/MechTrackBanner.png" alt="MechTrackBanner" class="img-fluid rounded shadow mt-3" width="575" />
 </div>
