--- a/FinalProject/AWD1115Final/AWD1115Final/Views/Shared/_Layout.cshtml
+++ b/FinalProject/AWD1115Final/AWD1115Final/Views/Shared/_Layout.cshtml
@@ -20,8 +20,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark bg-primary mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand d-flex align-items-center" asp-area="" asp-controller="Home" asp-action="Index">
-                    <img src="~/images/mechtrack-logo.png" alt="MechTrack Logo" width="40" class="img-fluid me-2" />
-                    MechTrack
+                    <img src="~/images/MechTrackLogos/MechTrackLogoRFB.png" alt="MechTrack Logo" width="65" class="img-fluid me-2" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
