Final Chapter 8 Partial Update
Its Really late and i will most likely recive a late grade so i will finish this along with all of past updates missed

--- a/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Index.cshtml
+++ b/FinalProject/AWD1115Final/AWD1115Final/Views/Jobs/Index.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Job List";
 }
 
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
 <h2>Jobs Currently Available</h2>
 
 <a asp-controller="Jobs" asp-action="Create" class="btn btn-success mb-3">Add New Job</a>
