--- a/Labs/CH10/ToDoApp/ToDoApp/Views/Home/Index.cshtml
+++ b/Labs/CH10/ToDoApp/ToDoApp/Views/Home/Index.cshtml
@@ -1,8 +1,64 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<ToDo>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="row">
+        <div class="col-md-2">
+            <form asp-action="Filter" method="psot">
+            <div class="mb-3">
+                <label class="form-label">Category:</label>
+                <select name="filter" class="form-select"
+                asp-items="@(new SelectList(ViewBag.Categories, "Category.Id", "Name", ViewBag.Filters.CategoryId))">
+                <option value="all">All</option>
+            </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Due:
+                    <select name="due" class="form-select"
+                    asp-items="@(new SelectList(ViewBag.DueFilters, "Key", "Value", ViewBag.Filters.Due))">
+                    <option value="all">All</option>
+                </select>
+                </label>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Status:</label>
+                    <select name="status" class="form-select"
+                    asp-items="@(new SelectList(ViewBag.Statuses, "StatusId", "Name", ViewBag.Filters.StatusId))">
+                    <option value="all">All</option>
+                </select>
+            </div>
+            <button type="submit" class="btn btn-primary">Filter</button>
+            <a asp-action="Index" asp-route-id="" class="btn btn-primary">Clear</a>
+            </form>
+        </div>
+        <div class="col-md-10">
+            <form asp-action="MarkComplete" method="post" asp-route-id="@ViewBag.Filters.FilterString">
+                <table class="table table-bordered table-striped mt-2">
+                    <thead>
+                        <tr>
+                            <th>Description</th>
+                            <th>Category</th>
+                            <th>Due Date</th>
+                            <th>Status</th>
+                            <th class="w-25"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (ToDo task in Model) {
+                            string overdue = task.Overdue ? "bg-warning" : "";
+                            <tr>
+                                <td>@task.Description</td>
+                                <td>@task.Category.Name</td>
+                                <td class="@overdue">@task.DueDate.ToShortDateString()</td>
+                                <td>
+                                    @if (task.StatusId == "open") {
+                                        <button type="submit" class="btn btn-primary btm-sm"
+                                        name="@nameof(ToDo.Id)" value="@task.Id">Mark Completed</button>
+                                    }
+                                }
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </div>
