--- a/Labs/CH10/ToDoApp/ToDoApp/Views/Home/Index.cshtml
+++ b/Labs/CH10/ToDoApp/ToDoApp/Views/Home/Index.cshtml
@@ -47,7 +47,8 @@
                             <tr>
                                 <td>@task.Description</td>
                                 <td>@task.Category.Name</td>
-                                <td class="@overdue">@task.DueDate.ToShortDateString()</td>
+                                <td class="@overdue">@task.DueDate?.ToShortDateString()</td>
+                                <td class="@overdue">@task.Status.Name</td>
                                 <td>
                                     @if (task.StatusId == "open") {
                                         <button type="submit" class="btn btn-primary btm-sm"
