--- a/Labs/CH09/Auctions/Auctions/Views/Shared/_Layout.cshtml
+++ b/Labs/CH09/Auctions/Auctions/Views/Shared/_Layout.cshtml
@@ -7,23 +7,35 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Auctions.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/78483bad65.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Auctions</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Listings" asp-action="Index"><i class="fa fa-solid fa-house"></i> Active Listings</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        @if(User.Identity.IsAuthenticated)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Listings" asp-action="Create"><i class="fa fa-solid fa-plus"></i> Create Listing</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Listings" asp-action="MyListings"><i class="fa fa-solid fa-newspaper"></i> My Listings</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Listings" asp-action="MyBids"><i class="fa fa-solid fa-sack-dollar"></i> My Bids</a>
+                            </li>
+                        }
+                        <li class="nav-item" style="margin:auto">
+                            <form asp-controller="Listings" asp-action="Index" method="post">
+                                <input style="width: 80%; float: left; border-top-left-radius: 20px; border-bottom-left-radius: 20px; background: whitesmoke;" type="text" name="searchString" class="form-control"/>
+                                <button style="width: 20%; float: left; border: none; background: transparent; height: 40px;" type="submit"><i class="fa fa-search"></i></button>
+                            </form>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
