--- a/FinalProject/S3FinalV2/S3FinalV2/wwwroot/css/site.css
+++ b/FinalProject/S3FinalV2/S3FinalV2/wwwroot/css/site.css
@@ -42,3 +42,8 @@ body {
     color: #000000;
     font-weight: bold;
 }
+
+.nav-link.active {
+    font-weight: bold;
+    text-decoration: underline;
+}
