--- a/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Jobs/Create.cshtml
+++ b/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Jobs/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model AWD1115Final.Models.Job
+﻿@model S3FinalV2.Models.Jobs
 
 @{
     ViewData["Title"] = "Add New Job";
@@ -26,29 +26,14 @@
     </div>
 
     <div class="form-group mb-2">
+        <label asp-for="EstCompTime">Estimated Completion Time</label>
+        <input asp-for="EstCompTime" type="number" step="0.25" class="form-control" placeholder="0.0" />
+    </div>
+
+    <div class="form-group mb-2">
         <label asp-for="Priority">Priority</label>
         <input asp-for="Priority" class="form-control" placeholder="Enter priority (Low, Medium, High)" />
         <span asp-validation-for="Priority" class="text-danger"></span>
-    </div>
-
-    <div class="form-group mb-2">
-        <label asp-for="AssignedMechanic">Assigned Mechanic</label>
-        <input asp-for="AssignedMechanic" class="form-control" placeholder="Enter mechanic name" />
-    </div>
-
-     <div class="form-group mb-2">
-        <label asp-for="CustomerName"></label>
-        <input asp-for="CustomerName" class="form-control" />
-    </div>
-
-    <div class="form-group mb-2">
-        <label asp-for="CompletionTime">Completion Time (hours)</label>
-        <input asp-for="CompletionTime" type="number" step="0.01" class="form-control" placeholder="0.0" />
-    </div>
-
-    <div class="form-check mb-2">
-        <input asp-for="IsCompleted" class="form-check-input" type="checkbox" />
-        <label asp-for="IsCompleted" class="form-check-label">Completed</label>
     </div>
 
     <div class="form-group mt-2">
