Mostly Complete Login logic and views

--- a/FinalProject/S3FinalV2/S3FinalV2/Views/Shared/_Layout.cshtml
+++ b/FinalProject/S3FinalV2/S3FinalV2/Views/Shared/_Layout.cshtml
@@ -66,9 +66,11 @@
                     {
                         <li class="nav-item">
                             <a class="nav-link text-light @(currentController == "Customer" ? "active" : "")"
-                               asp-controller="Customer" asp-action="Index">My Orders</a>
+                            asp-controller="Customer" asp-action="Index">My Orders</a>
                         </li>
                     }
+
+                    @if (User.IsInRole("Admin"))
                     {
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-light @(currentController == "Users" || currentController == "JobTemplates" ? "active" : "")"
