--- a/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Users/Index.cshtml
+++ b/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Users/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity
 
+@{
+    ViewData["Title"] = "Users List";
+    Layout = "_Layout";
+}
+
 @model IEnumerable<IdentityUser>
 
 <h2>Manage Users</h2>
