--- a/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Jobs/Index.cshtml
+++ b/FinalProject/S3FinalV2/S3FinalV2/Areas/Admin/Views/Jobs/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Job List";
+    Layout = "_Layout";
 }
 
 @if (TempData["SuccessMessage"] != null)
@@ -13,7 +14,7 @@
 
 <h2>Jobs Currently Available</h2>
 
-<a asp-controller="Jobs" asp-action="Create" class="btn btn-success mb-3">Add New Job</a>
+<a asp-area="Admin" asp-controller="Jobs" asp-action="Create" class="btn btn-success mb-3">Add New Job</a>
 
 <ul class="list-group pb-3">
     @foreach (var job in Model)
@@ -21,11 +22,11 @@
         <li class="list-group-item d-flex justify-content-between align-items-center mb-1">
             <div>
                 <strong>@job.Name</strong>
-                (Skill Level: @job.SkillLevel, Description: @job.Description, Estimated Completion Time: @job.EstCompTime, Priority: @job.Priority, )
+                (Skill Level: @job.SkillLevel, Description: @job.Description, Estimated Completion Time: @job.EstCompTime, Priority: @job.Priority)
             </div>
             <div>
-                <a asp-action="Edit" asp-route-id="@job.JobId" class="btn btn-primary btn-sm">Edit</a>
-                <a asp-action="Delete" asp-route-id="@job.JobId" class="btn btn-danger btn-sm">Delete</a>
+                <a asp-area="Admin" asp-controller="Jobs" asp-action="Edit" asp-route-id="@job.JobId" class="btn btn-primary btn-sm">Edit</a>
+                <a asp-area="Admin" asp-controller="Jobs" asp-action="Delete" asp-route-id="@job.JobId" class="btn btn-danger btn-sm">Delete</a>
             </div>
         </li>
     }
