Update to final

--- a/FinalProject/S3FinalV2/S3FinalV2/Views/AssignedJobs/Index.cshtml
+++ b/FinalProject/S3FinalV2/S3FinalV2/Views/AssignedJobs/Index.cshtml
@@ -47,9 +47,11 @@
                 <td>
                     @if (a.AssignedMechanics != null && a.AssignedMechanics.Any())
                     {
-                        foreach (var m in a.AssignedMechanics)
+                        @foreach (var ma in a.AssignedMechanics)
                         {
-                            <span class="badge bg-secondary">@m.Name</span>
+                            <span class="badge bg-secondary">
+                                @ma.Mechanic?.Name
+                            </span>
                         }
                     }
                     else
